[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/UI/TutorialController.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 288, 160 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 192 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 416, 384 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 64, 128 )

[node name="TutorialController" type="Node"]
script = ExtResource( 1 )

[node name="JumpTutoArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="JumpTutoArea"]
position = Vector2( 336, 768 )
shape = SubResource( 2 )

[node name="HoldJumpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HoldJumpArea"]
position = Vector2( 336, 768 )
shape = SubResource( 4 )

[node name="DoubleJumpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoubleJumpArea"]
position = Vector2( 1408, 448 )
shape = SubResource( 2 )

[node name="DashArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2( 1408, 448 )
shape = SubResource( 3 )

[node name="SwitchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchArea"]
position = Vector2( 1408, 448 )
shape = SubResource( 5 )

[connection signal="body_entered" from="JumpTutoArea" to="." method="_on_JumpTutoArea_body_entered"]
[connection signal="body_exited" from="JumpTutoArea" to="." method="_on_JumpTutoArea_body_exited"]
[connection signal="body_entered" from="HoldJumpArea" to="." method="_on_HoldJumpArea_body_entered"]
[connection signal="body_exited" from="HoldJumpArea" to="." method="_on_HoldJumpArea_body_exited"]
[connection signal="body_entered" from="DoubleJumpArea" to="." method="_on_DoubleJumpArea_body_entered"]
[connection signal="body_exited" from="DoubleJumpArea" to="." method="_on_DoubleJumpArea_body_exited"]
[connection signal="body_entered" from="DashArea" to="." method="_on_DashArea_body_entered"]
[connection signal="body_exited" from="DashArea" to="." method="_on_DashArea_body_exited"]
[connection signal="body_entered" from="SwitchArea" to="." method="_on_SwitchArea_body_entered"]
[connection signal="body_exited" from="SwitchArea" to="." method="_on_SwitchArea_body_exited"]
